--- a/HeaderFooter.css
+++ b/HeaderFooter.css
@@ -65,7 +65,7 @@ header {
     justify-content: space-between;
 }
 
-.header__account--item {
+.user-btn, .fa-bell {
     color: white;
     background-color: #22a6b3;
     height: 35px;
@@ -77,10 +77,100 @@ header {
     font-size: 18px;
     cursor: pointer;
     margin-left: 10px;
+    border: none;
+}
+
+.user-btn:hover {
+    background-color: rgb(0, 192, 112);
+}
+
+.modal-header-logo {
+    width: 150px;
+
+}
+
+.modal-title {
+    margin-left: 40px;
+}
+
+.modal-footer {
+    display: flex;
+    flex-direction: column;
+    padding-top: 30px;
+}
+
+.signIn-btn, .signUp-btn {
+    background-color: #22a6b3;
+    padding: 8px 100px;
+    border-radius: 4px;
+    color: #fff;
+    transition: all 0.2s ease;
+    margin-bottom: 20px;
+}
+
+.signUp-btn:hover {
+    color: #fff;
+    background-color: rgb(0, 192, 112);
+}
+
+.signIn-btn:hover {
+    color: #fff;
+    background-color: rgb(0, 192, 112);
+}
+
+.signUp-btn-container {
+    display: flex;
+    align-items: center;
+    font-size: 14px;
+    margin-top: 20px;
+}
+
+.InsignUp-btn {
+    background-color: #fff;
+    color: #22a6b3;
+    border: none;
+    width: fit-content;
+    height: auto;
+    padding: 0;
+    margin-left: 10px;
+    font-size: 15px;
+}
+
+.InsignUp-btn:hover {
+    color: rgb(0, 192, 112);
+    background-color: #fff;
+}
+
+.modal-body {
+    margin-bottom: 30px;
+}
+
+.username-container, .password-container, .signUp-username-container, .signUp-password-container, .signUp-email-container {
+    width: 80%;
+    display: flex;
+    justify-self: center;
+    justify-content: space-between;
+    align-items: flex-end;
+    margin-top: 20px;
+    margin-left: 40px;
+}
+
+.signIn-input, .signUp-input {
+    font-size: 15px;
+    width: 250px;
+    height: 30px;
+    border: none;
+    padding: 5px;
+    box-sizing: border-box;
+    border-bottom: 1px solid rgba(0,0,0,0.15);
 }
 
 
 /* End Header */
+
+
+
+
 
 /* Footer */
 footer {
