--- a/HeaderFooter.css
+++ b/HeaderFooter.css
@@ -1,3 +1,8 @@
+* {
+    padding: 0;
+    margin: 0;
+}
+
 html,
 body {
     margin: 0;
@@ -206,7 +211,7 @@ footer {
 
 .footer__menu {
     list-style: none;
-    margin-left: -40px;
+    margin-left: -30px;
 }
 
 .footer__menu--item {
@@ -303,9 +308,6 @@ footer {
         background-color: #fff;
         padding-bottom: 10px;
         transition: all 0.5s;
-        /* padding: 0px 100px;
-        margin-left: -100px; */
-        margin-left: -40px;
     }
 
     .header__menu--items {
@@ -323,6 +325,7 @@ footer {
     .header__account--item {
         width: 40px;
         height: 40px;
+        margin-left: 5px;
     }
 
     .fa-bars {
@@ -346,6 +349,7 @@ footer {
     .header__account--item {
         width: 35px;
         height: 35px;
+        margin-right: 10px;
     }
 
     .fa-bars {
@@ -368,6 +372,14 @@ footer {
     .social-navigation > a {
         font-size: 13px;
         margin-right: 10px;
+    }
+
+    .header__account--item {
+        margin-right: 10px;
+    }
+
+    .header__account {
+        padding-right: 10px;
     }
 }
 
@@ -406,6 +418,10 @@ footer {
         flex-wrap: wrap;
         line-height: 2;
         height: auto;
+    }
+
+    .footer__widget {
+        padding-top: 20px;
     }
     
 }
