--- a/HeaderFooter.css
+++ b/HeaderFooter.css
@@ -104,13 +104,14 @@ header {
     padding-top: 30px;
 }
 
-.signIn-btn, .signUp-btn {
+.logIn-btn, .signUp-btn {
     background-color: #22a6b3;
     padding: 8px 100px;
     border-radius: 4px;
     color: #fff;
     transition: all 0.2s ease;
     margin-bottom: 20px;
+    cursor: pointer;
 }
 
 .signUp-btn:hover {
@@ -118,12 +119,12 @@ header {
     background-color: rgb(0, 192, 112);
 }
 
-.signIn-btn:hover {
+.logIn-btn:hover {
     color: #fff;
     background-color: rgb(0, 192, 112);
 }
 
-.signUp-btn-container {
+.InsignUp-btn-container {
     display: flex;
     align-items: center;
     font-size: 14px;
@@ -147,20 +148,24 @@ header {
 }
 
 .modal-body {
-    margin-bottom: 30px;
+    margin-bottom: 0px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
 }
 
-.username-container, .password-container, .signUp-username-container, .signUp-password-container, .signUp-email-container {
-    width: 80%;
+.form-item-container {
+    width: 100%;
     display: flex;
     justify-self: center;
     justify-content: space-between;
     align-items: flex-end;
-    margin-top: 20px;
-    margin-left: 40px;
+    margin-top: 30px;
 }
 
-.signIn-input, .signUp-input {
+.logIn-input, .signUp-input {
     font-size: 15px;
     width: 250px;
     height: 30px;
@@ -170,7 +175,38 @@ header {
     border-bottom: 1px solid rgba(0,0,0,0.15);
 }
 
+.logIn-label {
+    margin-right: 20px;
+}
 
+.signUp-label {
+    font-size: ;
+}
+
+.signUp-input {
+    align-self: flex-end;
+    width: 250px;
+    margin-left: 20px;
+}
+
+.material-icons-outlined {
+    position: absolute;
+    right: 40px;
+    cursor: pointer;
+    color: gray;
+}
+
+.errorText {
+    color: red;
+    font-size: 13px;
+    margin-top: 15px;
+    height: 15px;
+}
+
+#username-errorText {
+    margin-bottom: -20px;
+    margin-top: 5px;
+}
 /* End Header */
 
 
