--- a/HeaderFooter.css
+++ b/HeaderFooter.css
@@ -76,16 +76,21 @@ header {
     height: 35px;
     width: 35px;
     border-radius: 50%;
-    display: flex;
+    display: flex !important;
     align-items: center;
     justify-content: center;
     font-size: 18px;
     cursor: pointer;
     margin-left: 10px;
     border: none;
+    transition: all 0.3s ease;
 }
 
 .user-btn:hover {
+    background-color: rgb(0, 192, 112);
+}
+
+.fa-bell:hover {
     background-color: rgb(0, 192, 112);
 }
 
@@ -332,6 +337,7 @@ footer {
 
     .header__menu {
         display: none;
+        z-index: 99;
     }
 
     .header__menu--list {
